--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.1.RELEASE")
     }
 }
 
@@ -24,14 +24,16 @@ repositories {
 }
 
 
+
 ext{
     lombokVersion = '1.18.0'
     springBootVersion = '2.0.1.RELEASE'
 }
 
-dependencies {
-    compile (group: 'org.springframework.boot', name: 'spring-boot-starter', version: springBootVersion )
 
+dependencies {
+
+    compile (group: 'org.springframework.boot', name: 'spring-boot-starter', version: springBootVersion )
     compileOnly("org.springframework.boot:spring-boot-configuration-processor:${springBootVersion}")
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.8.0-beta2'
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
